- Fixed: Null object bug in IsotopeCart
- Fixed: Disabled deprecated product storage in checkout module - now copies only product options to order items table.
- Fixed: Changed all price fields to use decimal(12,2) (payment gateways require 2 digit precision)
- Fixed: Table naming is not consistent, renamed tl_cart,tl_cart_items to tl_iso_cart,tl_iso_cart_items (Ticket #117)
- Removed: Paypal Website Payments Pro option - use Paypal Payflow Pro or Paypal Standard
- Removed generatePrice() function, stpl_price and stpl_total_price templates. Now using formatPriceWithCurrency
- Removed taxTotalWithShipping simple token

Version 0.1.3 (2010-??-??)
------------------------------
- Fixed: InsertTags could output HTML in meta description
- Fixed: Status labels were not available in order history
- Fixed: sending email as text only did not work
- Fixed: Javascript sorting of images did not work
- Fixed: No products and no breadcrumb show up if filtered page does not have a product (Ticket #115)
- Fixed multiple URL problems in address book module
- Fixed multiple URL and template problems in shopping cart module
- Fixed bug in runonce.php, must not use TRUNCATE to empty cart table

Version 0.1.2 (2010-06-20)
------------------------------
- Fixed: Backend variant listing showed unassigned attributes (Ticket #135)
- Fixed problem with payment modules accepting only two digit floating point precision (Ticket #136)
- Fixed wrong grand total price in cart module (Ticket #137)
- Fixed variant price in cart not correct
- Fixed a possible bug with attributes not available in the template
- Moved product tax class field to pricing legend (Ticket #134)
- Now using domready event to submit payment checkout forms (Ticket #145)
- Fixed multiple label issues (Ticket #78, Ticket #148, Ticket #150)

Version 0.1.1 (2010-06-06)
------------------------------
- Customer email is now sent to member email if no email in address book